# release-test

./: LICENSE  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: release-drafter-main.yaml  release-drafter-pr.yaml  release-drafter.yaml
src/: test.py
