[tool.poetry]
name = "release-test"
version = "0.1.2"
description = ""
authors = ["Keisuke Shima <19993104+KeisukeShima@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
